--- a/styles/g3.css
+++ b/styles/g3.css
@@ -169,8 +169,44 @@ text-align: center;
 }
 
 
+/* feature section related style */
 
+.features{
+  gap: 140px;
+}
+#feature-section-title{
+  border-left: 5px solid #FF900E;
+  padding-left: 21px;
+}
+ .feature-card .feature-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  
+  
+}
 
+.feature-card{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+/* badge  related styles */
+#exprience-badge{
+  height: 200px;
+  width: 342px;
+  margin-left: -100px;
+  margin-top: -100px;
+  padding: 46px 30px;
+}
+#experience-years{
+  font-size: 4rem;
+  font-weight: 700;
+
+}
 
 
 
