--- a/styles/g3.css
+++ b/styles/g3.css
@@ -201,11 +201,16 @@ text-align: center;
   margin-left: -100px;
   margin-top: -100px;
   padding: 46px 30px;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 #experience-years{
   font-size: 4rem;
   font-weight: 700;
 
+}
+.featured-architect img{
+  width: 100%;
 }
 
 
@@ -213,7 +218,10 @@ text-align: center;
 
 /* responsive media quary */
 @media screen and (max-width:576px) {
-  .navbar, .nav-links, .teams{
+  .navbar,
+   .nav-links,
+   .features,
+    .teams{
     flex-direction: column;
   }
   .team-image-container, 
@@ -225,18 +233,24 @@ text-align: center;
   .our-features{
     margin: 0 auto;
   }
+  .facts-container{
+    justify-items: center;
+    gap: 24px;
+  }
+  .sponsors-company{
+    justify-items:center ;
+    gap: 50px;
+  }
+  .sponsor-info{
+    max-width: 100%;
+  }
+
+  #exprience-badge{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
 }
-.facts-container{
-  justify-items: center;
-  gap: 24px;
-}
-.sponsors-company{
-  justify-items:center ;
-  gap: 50px;
-}
-.sponsor-info{
-  max-width: 100%;
-}
+
 /* medium size device */
 @media screen and(min-width:576px) and (max-width:992px) {
   .teams{
